--- a/.env
+++ b/.env
@@ -6,6 +6,11 @@ OPTIMISM_RPC_URL=https://mainnet.optimism.io
 OPTIMISM_TESTNET_RPC_URL=https://goerli.optimism.io
 OPTIMISM_PRIVATE_KEY=your_private_key_here
 
+# For production, you'd need RPC API keys:
+# ALCHEMY_API_KEY=your_alchemy_key_here
+# INFURA_API_KEY=your_infura_key_here
+# QUICKNODE_API_KEY=your_quicknode_key_here
+
 # P2P Configuration  
 P2P_LISTEN_PORT=4001
 P2P_BOOTSTRAP_PEERS=
@@ -18,6 +23,7 @@ DAO_CONTRACT_ADDRESS=0x0987654321098765432109876543210987654321
 LOG_LEVEL=INFO
 LOG_FILE=logs/pi2o.log
 
-# Development
+# Development - Mock mode for demos
 DEV_MODE=true
 MOCK_OPTIMISM=true
+MOCK_LIBP2P=true
